test/expected/declare_o_colon2_rk_rk.out
declare :: as operator (reference to S) returning reference to S
        ^
9: error: operator "::" can not be overloaded
